--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.6.1",
     "axios": "^0.19.0",
     "react": "^16.11.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
     "react-radio-group": "^3.0.3",
     "react-redux": "^7.1.3",
